# badfest-invite-telegram-bot

./: .gitignore  Dockerfile  User.py  badfest-invites-firebase.json  conversationbot  docker-compose.yml  error_handler.py  fire_persistence.py  gods.json  invites.py  main.py  main_old.py  purchases.py  pyproject.toml  requirements.txt  settings.py  tickets.py  users.py
.github/workflows/: docker-image.yml
handlers/: error_handler.py
models/: art_requests.py  base_products.py  base_purchases.py  invites.py  merch_purchases.py  merchs.py  purchases.py  ticket_purchases.py  tickets.py  users.py
persistence/: firebase_persistence.py
utils/: helper.py
